clean some common word

--- a/CleanHashtag.ipynb
+++ b/CleanHashtag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "RangeIndex(start=0, stop=48755, step=1)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -22,8 +22,8 @@
     "import string\n",
     "import re\n",
     "\n",
-    "df_raw = pd.read_csv(r'C:\\Users\\paton\\Pick2ReadData\\readawrite_y1.csv')\n",
-    "df = pd.read_csv(r'C:\\Users\\paton\\Pick2ReadData\\tunwalai_y1.csv')\n",
+    "df = pd.read_csv(r'C:\\Users\\paton\\Pick2ReadData\\BoysloveFiltered\\readawrite_y2.csv')\n",
+    "df_tun = pd.read_csv(r'C:\\Users\\paton\\Pick2ReadData\\BoysloveFiltered\\tunwalai_y2.csv')\n",
     "df.drop('Unnamed: 0', axis=1, inplace=True)\n",
     "df.index"
    ]
@@ -31,295 +31,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>author</th>\n",
-       "      <th>category</th>\n",
-       "      <th>commentCount</th>\n",
-       "      <th>isComplete</th>\n",
-       "      <th>numOfchap</th>\n",
-       "      <th>pic</th>\n",
-       "      <th>ratingCount</th>\n",
-       "      <th>tag</th>\n",
-       "      <th>title</th>\n",
-       "      <th>viewer</th>\n",
-       "      <th>new_title</th>\n",
-       "      <th>hashtag</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>SleepXcody</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>154</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>23</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/story-...</td>\n",
-       "      <td>628</td>\n",
-       "      <td>Misstep</td>\n",
-       "      <td>Misstep สัสจริงๆ รักคนอย่างมึง [Yaoi]</td>\n",
-       "      <td>234,469</td>\n",
-       "      <td>สัสจริงๆรักคนอย่างมึง</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>PP2527555</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>11</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>9</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/517/63...</td>\n",
-       "      <td>378</td>\n",
-       "      <td>-</td>\n",
-       "      <td>ณ</td>\n",
-       "      <td>14,571</td>\n",
-       "      <td>ณ</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>SleepXcody</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>12</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/</td>\n",
-       "      <td>270</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Magic Fox เรื่องหมาหมา [Yaoi -..-]</td>\n",
-       "      <td>8,432</td>\n",
-       "      <td>เรื่องหมาหมา</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Pierre</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>2,255</td>\n",
-       "      <td>จบ</td>\n",
-       "      <td>60</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/story-...</td>\n",
-       "      <td>2,105</td>\n",
-       "      <td>Y,Yaoi,เลว,โหด,nc,เกย์,เถื่อน,วาย,รุนแรง,โหด</td>\n",
-       "      <td>i'm not &amp; you don't [Yaoi] END - รีปริ้นท์ถึง1...</td>\n",
-       "      <td>3,809,811</td>\n",
-       "      <td>รีปริ้นท์ถึง</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>อัปสรา/วเนกำพู</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>5</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>2</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/1031/1...</td>\n",
-       "      <td>185</td>\n",
-       "      <td>ปีเตอร์ ทับทิม สิงคโปร์ คาร์ลตัน</td>\n",
-       "      <td>มนต์รักอาเซียน (ใช้ชื่อนี้ไปก่อน ผ่านการพิจรณา...</td>\n",
-       "      <td>7,078</td>\n",
-       "      <td>มนต์รักอาเซียน</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48750</th>\n",
-       "      <td>yuuya</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>1</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/508969...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>My wife |เมียผมโหดมากครับ|</td>\n",
-       "      <td>45</td>\n",
-       "      <td>เมียผมโหดมากครับ</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48751</th>\n",
-       "      <td>ppp</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/508978...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>รักนี้ฉันมีให้แค่นาย</td>\n",
-       "      <td>รักนี้ฉันมีให้แค่นาย</td>\n",
-       "      <td>0</td>\n",
-       "      <td>รักนี้ฉันมีให้แค่นาย</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48752</th>\n",
-       "      <td>Lalinkiss</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>2</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/508995...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>พระเอกหล่อ รวย นายเอกท้องได้ โรแมนติก ดราม่า</td>\n",
-       "      <td>รับจ้างรัก</td>\n",
-       "      <td>53</td>\n",
-       "      <td>รับจ้างรัก</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48753</th>\n",
-       "      <td>วสุวี</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/509004...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ธำมรงค์ดวงหฤทัย👑</td>\n",
-       "      <td>4</td>\n",
-       "      <td>ธำมรงค์ดวงหฤทัย</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>48754</th>\n",
-       "      <td>Color Beer</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/509005...</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ดราม่า</td>\n",
-       "      <td>หนุ่มน้อยตู้กระจก</td>\n",
-       "      <td>21</td>\n",
-       "      <td>หนุ่มน้อยตู้กระจก</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>48755 rows × 12 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "               author category commentCount isComplete numOfchap  \\\n",
-       "0          SleepXcody  นิยาย y          154        NaN        23   \n",
-       "1           PP2527555  นิยาย y           11        NaN         9   \n",
-       "2          SleepXcody  นิยาย y           12        NaN         2   \n",
-       "3              Pierre  นิยาย y        2,255         จบ        60   \n",
-       "4      อัปสรา/วเนกำพู  นิยาย y            5        NaN         2   \n",
-       "...               ...      ...          ...        ...       ...   \n",
-       "48750           yuuya  นิยาย y            1        NaN         1   \n",
-       "48751             ppp  นิยาย y            0        NaN         1   \n",
-       "48752       Lalinkiss  นิยาย y            2        NaN         0   \n",
-       "48753           วสุวี  นิยาย y            0        NaN         1   \n",
-       "48754      Color Beer  นิยาย y            0        NaN         0   \n",
-       "\n",
-       "                                                     pic ratingCount  \\\n",
-       "0      https://cdn-th.tunwalai.net/files/story/story-...         628   \n",
-       "1      https://cdn-th.tunwalai.net/files/story/517/63...         378   \n",
-       "2               https://cdn-th.tunwalai.net/files/story/         270   \n",
-       "3      https://cdn-th.tunwalai.net/files/story/story-...       2,105   \n",
-       "4      https://cdn-th.tunwalai.net/files/story/1031/1...         185   \n",
-       "...                                                  ...         ...   \n",
-       "48750  https://cdn-th.tunwalai.net/files/story/508969...           0   \n",
-       "48751  https://cdn-th.tunwalai.net/files/story/508978...           0   \n",
-       "48752  https://cdn-th.tunwalai.net/files/story/508995...           1   \n",
-       "48753  https://cdn-th.tunwalai.net/files/story/509004...           0   \n",
-       "48754  https://cdn-th.tunwalai.net/files/story/509005...           1   \n",
-       "\n",
-       "                                                tag  \\\n",
-       "0                                           Misstep   \n",
-       "1                                                 -   \n",
-       "2                                               NaN   \n",
-       "3      Y,Yaoi,เลว,โหด,nc,เกย์,เถื่อน,วาย,รุนแรง,โหด   \n",
-       "4                  ปีเตอร์ ทับทิม สิงคโปร์ คาร์ลตัน   \n",
-       "...                                             ...   \n",
-       "48750                                           NaN   \n",
-       "48751                          รักนี้ฉันมีให้แค่นาย   \n",
-       "48752  พระเอกหล่อ รวย นายเอกท้องได้ โรแมนติก ดราม่า   \n",
-       "48753                                           NaN   \n",
-       "48754                                        ดราม่า   \n",
-       "\n",
-       "                                                   title     viewer  \\\n",
-       "0                  Misstep สัสจริงๆ รักคนอย่างมึง [Yaoi]    234,469   \n",
-       "1                                                      ณ     14,571   \n",
-       "2                     Magic Fox เรื่องหมาหมา [Yaoi -..-]      8,432   \n",
-       "3      i'm not & you don't [Yaoi] END - รีปริ้นท์ถึง1...  3,809,811   \n",
-       "4      มนต์รักอาเซียน (ใช้ชื่อนี้ไปก่อน ผ่านการพิจรณา...      7,078   \n",
-       "...                                                  ...        ...   \n",
-       "48750                         My wife |เมียผมโหดมากครับ|         45   \n",
-       "48751                               รักนี้ฉันมีให้แค่นาย          0   \n",
-       "48752                                         รับจ้างรัก         53   \n",
-       "48753                                   ธำมรงค์ดวงหฤทัย👑          4   \n",
-       "48754                                  หนุ่มน้อยตู้กระจก         21   \n",
-       "\n",
-       "                   new_title hashtag  \n",
-       "0      สัสจริงๆรักคนอย่างมึง     NaN  \n",
-       "1                          ณ     NaN  \n",
-       "2               เรื่องหมาหมา     NaN  \n",
-       "3               รีปริ้นท์ถึง     NaN  \n",
-       "4             มนต์รักอาเซียน     NaN  \n",
-       "...                      ...     ...  \n",
-       "48750       เมียผมโหดมากครับ     NaN  \n",
-       "48751   รักนี้ฉันมีให้แค่นาย     NaN  \n",
-       "48752             รับจ้างรัก     NaN  \n",
-       "48753        ธำมรงค์ดวงหฤทัย     NaN  \n",
-       "48754      หนุ่มน้อยตู้กระจก     NaN  \n",
-       "\n",
-       "[48755 rows x 12 columns]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -428,10 +139,10 @@
        "      <td>https://cdn-th.tunwalai.net/files/story/15008/...</td>\n",
        "      <td>351</td>\n",
        "      <td>ร้ายนัก!....จับทำเมียแม่ง</td>\n",
-       "      <td>#ร้ายนัก!....จับทำเมียแม่ง ( 18+ )</td>\n",
+       "      <td>#ร้ายนัก....จับทำเมียแม่ง ( 18+ )</td>\n",
        "      <td>515,608</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>ร้ายนัก</td>\n",
+       "      <td>ร้ายนักจับทำเมียแม่ง</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -525,7 +236,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1898 rows × 12 columns</p>\n",
+       "<p>1897 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -573,7 +284,7 @@
        "256               [Yaoi&NC18+] #พี่ครับ ผม(ไม่)ชอบผู้ชาย   29,144   \n",
        "283    [แฟนฟิค] 2 : PM Deadline...บ่ายสอง #บ่ายสองต้อ...    2,415   \n",
        "393               GOT7 WICKED #ฟิคเด็กเถื่อน { NC PART }  105,536   \n",
-       "643                   #ร้ายนัก!....จับทำเมียแม่ง ( 18+ )  515,608   \n",
+       "643                    #ร้ายนัก....จับทำเมียแม่ง ( 18+ )  515,608   \n",
        "...                                                  ...      ...   \n",
        "48675                                 #วรัณยู | yinwar 𝐼      168   \n",
        "48677  PHENOMENAL\\n\\nโคตรร้ายแต่ก็จะรัก#ฮาเดสxเพอร์เซ...        7   \n",
@@ -581,23 +292,23 @@
        "48730                   เพื่อน(สนิท)เลื่อนขั้น #คิวเตอร์       34   \n",
        "48736                         [Omegaverse] #ภรรยาผมดุมาก    1,417   \n",
        "\n",
-       "                new_title         hashtag  \n",
-       "20                    NaN    จัสยูยิมเซย์  \n",
-       "256                   NaN       พี่ครับผม  \n",
-       "283                แฟนฟิค  บ่ายสองต้องรอด  \n",
-       "393                   NaN   ฟิคเด็กเถื่อน  \n",
-       "643                   NaN         ร้ายนัก  \n",
-       "...                   ...             ...  \n",
-       "48675                 NaN          วรัณยู  \n",
-       "48677  โคตรร้ายแต่ก็จะรัก           ฮาเดส  \n",
-       "48726                 NaN   ท้องฟ้าสีคราม  \n",
-       "48730              เพื่อน        คิวเตอร์  \n",
-       "48736                 NaN    ภรรยาผมดุมาก  \n",
+       "                new_title               hashtag  \n",
+       "20                    NaN          จัสยูยิมเซย์  \n",
+       "256                   NaN             พี่ครับผม  \n",
+       "283                แฟนฟิค        บ่ายสองต้องรอด  \n",
+       "393                   NaN         ฟิคเด็กเถื่อน  \n",
+       "643                   NaN  ร้ายนักจับทำเมียแม่ง  \n",
+       "...                   ...                   ...  \n",
+       "48675                 NaN                วรัณยู  \n",
+       "48677  โคตรร้ายแต่ก็จะรัก                 ฮาเดส  \n",
+       "48726                 NaN         ท้องฟ้าสีคราม  \n",
+       "48730              เพื่อน              คิวเตอร์  \n",
+       "48736                 NaN          ภรรยาผมดุมาก  \n",
        "\n",
-       "[1898 rows x 12 columns]"
+       "[1897 rows x 12 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +525,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>48466 rows × 12 columns</p>\n",
+       "<p>48449 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -883,16 +594,16 @@
        "48753        ธำมรงค์ดวงหฤทัย     NaN  \n",
        "48754      หนุ่มน้อยตู้กระจก     NaN  \n",
        "\n",
-       "[48466 rows x 12 columns]"
+       "[48449 rows x 12 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ship = ['จ้านเกอ','โชซอก','ป๋อตี้จ้านเกอ','ไคฮุน','ชานแบค','กุกมิน','โยซอก','ป๋อจ้าน','จ้านป๋อ','กุกวี','แจโด','ซึงพโย','มาร์คแบม','แจ็คแจ','ปมนยอง','วีกุก','ออฟกัน','บกพพ','บิวกิ้นพีพี','วีมิน','คั่นกู','กันออฟ','แบมมาร์ค','เนียลอง','ซีเฉิง','ซึงยอนซอก']\n",
+    "ship = ['บุ๋นเปรม','ไบร์ทวิน','จ้านเกอ','โชซอก','ป๋อตี้จ้านเกอ','ไคฮุน','ชานแบค','กุกมิน','โยซอก','ป๋อจ้าน','จ้านป๋อ','กุกวี','แจโด','ซึงพโย','มาร์คแบม','แจ็คแจ','ปมนยอง','วีกุก','ออฟกัน','บกพพ','บิวกิ้นพีพี','วีมิน','คั่นกู','กันออฟ','แบมมาร์ค','เนียลอง','ซีเฉิง','ซึงยอนซอก']\n",
     "r_noship = df[~df.hashtag.str.contains('|'.join(ship), na=False)]\n",
     "r_noship"
    ]
@@ -1188,12 +899,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#r_noship.to_csv('readawrite_ints1.csv',encoding='utf-8')\n",
-    "r_noship.to_csv('tunwalai_ints1.csv',encoding='utf-8')"
+    "r_noship.to_csv(r'C:\\Users\\paton\\Pick2ReadData\\ForCleansingHashtag\\readawrite_ints2.csv',encoding='utf-8')\n",
+    "#r_noship.to_csv(r'C:\\Users\\paton\\Pick2ReadData\\ForCleansingHashtag\\tunwalai_ints3.csv',encoding='utf-8')"
    ]
   },
   {
