edit clean common word

--- a/CleanTunwalai.ipynb
+++ b/CleanTunwalai.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "RangeIndex(start=0, stop=156028, step=1)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -272,13 +272,13 @@
        "[156028 rows x 10 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"df.dropna(subset=['title', 'category','author'],inplace=True)\n",
+    "df.dropna(subset=['title', 'category','author'],inplace=True)\n",
     "df.reset_index(drop=True, inplace=True)\n",
     "df.drop_duplicates()\n",
     "\n",
@@ -288,13 +288,12 @@
     "wordlist = '&#039;|&amp;|&bull;|&hearts;|&quot;|&lt;'\n",
     "df['title'] = df['title'].str.replace(wordlist, '')\n",
     "df['author'] = df['author'].str.replace(wordlist, '')\n",
-    "\"\"\"\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +534,7 @@
        "[156028 rows x 10 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,15 +542,15 @@
    "source": [
     "#delete common word\n",
     "df2 = df\n",
-    "commonword = ['นิยายแปล','เรื่องสั้น','รวมฉาก','อ่านฟรี','!']\n",
+    "commonword = ['นิยายแปล','เรื่องสั้น','รวมฉาก','อ่านฟรี','!','จบ','จบแล้วจ้า','ตอนพิเศษ','ทดลองอ่าน','18+']\n",
     "wordcut = '|'.join(commonword)\n",
-    "df2['title'].str.replace(wordcut, '')\n",
+    "df2['title'] = df2['title'].str.replace(wordcut,'')\n",
     "df2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -588,78 +587,23 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>127723</th>\n",
-       "      <td>MANIE-Story</td>\n",
-       "      <td>นิยาย อีโรติก</td>\n",
-       "      <td>158</td>\n",
-       "      <td>จบ</td>\n",
-       "      <td>39</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/430788...</td>\n",
-       "      <td>410</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ผมรักคุณหมอ (เจ้านาย-สโนว์)</td>\n",
-       "      <td>166,116</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130646</th>\n",
-       "      <td>Minnie in love</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>4</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>19</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/439605...</td>\n",
-       "      <td>132</td>\n",
-       "      <td>นิยายโรแมนติคคอมเมดี้,นิยายวาย,ดราม่า,เศร้า,มห...</td>\n",
-       "      <td>ช่วยด้วยครับ...ผมรักคุณหมอ</td>\n",
-       "      <td>4,349</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>138206</th>\n",
-       "      <td>mo</td>\n",
-       "      <td>นิยาย y</td>\n",
-       "      <td>0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>7</td>\n",
-       "      <td>https://cdn-th.tunwalai.net/files/story/461935...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>ป๋อจ้าน,ควานเฉิง,ปินซิง</td>\n",
-       "      <td>ผมรักคุณหมอ นะครับ</td>\n",
-       "      <td>348</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                author       category commentCount isComplete numOfchap  \\\n",
-       "127723     MANIE-Story  นิยาย อีโรติก          158         จบ        39   \n",
-       "130646  Minnie in love        นิยาย y            4        NaN        19   \n",
-       "138206              mo        นิยาย y            0        NaN         7   \n",
-       "\n",
-       "                                                      pic ratingCount  \\\n",
-       "127723  https://cdn-th.tunwalai.net/files/story/430788...         410   \n",
-       "130646  https://cdn-th.tunwalai.net/files/story/439605...         132   \n",
-       "138206  https://cdn-th.tunwalai.net/files/story/461935...           3   \n",
-       "\n",
-       "                                                      tag  \\\n",
-       "127723                                                NaN   \n",
-       "130646  นิยายโรแมนติคคอมเมดี้,นิยายวาย,ดราม่า,เศร้า,มห...   \n",
-       "138206                            ป๋อจ้าน,ควานเฉิง,ปินซิง   \n",
-       "\n",
-       "                              title   viewer  \n",
-       "127723  ผมรักคุณหมอ (เจ้านาย-สโนว์)  166,116  \n",
-       "130646   ช่วยด้วยครับ...ผมรักคุณหมอ    4,349  \n",
-       "138206           ผมรักคุณหมอ นะครับ      348  "
+       "Empty DataFrame\n",
+       "Columns: [author, category, commentCount, isComplete, numOfchap, pic, ratingCount, tag, title, viewer]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2[df2['title'].str.contains('ผมรักคุณหมอ', na=False)]"
+    "df2[df2['title'].str.contains('จบ', na=False)]"
    ]
   },
   {
@@ -916,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1002,7 +946,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5191 rows × 2 columns</p>\n",
+       "<p>5180 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1019,10 +963,10 @@
        "156010       NaN           คู่หมั้นตามใจแม่มบ\n",
        "156027       NaN               อาถรรพ์ห้ามรัก\n",
        "\n",
-       "[5191 rows x 2 columns]"
+       "[5180 rows x 2 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1100,7 +1044,7 @@
        "138206        ผมรักคุณหมอนะครับ     NaN"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1392,7 +1336,7 @@
        "[156028 rows x 12 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -1416,10 +1360,10 @@
     {
      "data": {
       "text/plain": [
-       "5210"
+       "5180"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,16 +1379,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df4.to_csv('tunwalai_full_hash_set4.csv')"
+    "#df4.to_csv('tunwalai_full_hash_set5.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1594,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>48755 rows × 12 columns</p>\n",
+       "<p>48449 rows × 12 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1719,10 +1663,10 @@
        "48753        ธำมรงค์ดวงหฤทัย     NaN  \n",
        "48754      หนุ่มน้อยตู้กระจก     NaN  \n",
        "\n",
-       "[48755 rows x 12 columns]"
+       "[48449 rows x 12 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1730,14 +1674,16 @@
    "source": [
     "boyslove = df4[df4['category'].str.contains('นิยาย y')]\n",
     "boyslove.reset_index(drop=True, inplace=True)\n",
-    "#boyslove.to_csv('C:\\Users\\paton\\Pick2ReadData\\BoysloveFiltered\\tunwalai_y3.csv',encoding='utf-8')\n",
+    "ship = ['บุ๋นเปรม','ไบร์ทวิน','จ้านเกอ','โชซอก','ป๋อตี้จ้านเกอ','ไคฮุน','ชานแบค','กุกมิน','โยซอก','ป๋อจ้าน','จ้านป๋อ','กุกวี','แจโด','ซึงพโย','มาร์คแบม','แจ็คแจ','ปมนยอง','วีกุก','ออฟกัน','บกพพ','บิวกิ้นพีพี','วีมิน','คั่นกู','กันออฟ','แบมมาร์ค','เนียลอง','ซีเฉิง','ซึงยอนซอก']\n",
+    "boyslove=boyslove[~boyslove.hashtag.str.contains('|'.join(ship), na=False)]\n",
+    "#boyslove.to_csv(r'C:\\Users\\paton\\Pick2ReadData\\BoysloveFiltered\\tunwalai_y5.csv',encoding='utf-8')\n",
     "\n",
     "boyslove"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -2027,7 +1973,7 @@
        "[48755 rows x 13 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
